Fixes unwanted scrollbar in dialog content

--- a/src/stylesheets/components/_dialog.scss
+++ b/src/stylesheets/components/_dialog.scss
@@ -24,8 +24,8 @@
 
 .sds-dialog-content {
   display: block;
-  margin: 0 -24px;
-  padding: 0 24px;
+  margin: -24px;
+  padding: 24px;
   max-height: 65vh;
   overflow: auto;
   -webkit-overflow-scrolling: touch;
